--- a/css/styles.css
+++ b/css/styles.css
@@ -503,14 +503,19 @@ img {
   background-color: transparent;
   padding-left: 16px;
   padding-right: 16px;
-  color: var(--white-background, #fff); 
+  color: var(--white-background, #fff);
+   font-size: 12px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15)); 
 }
 
 .footer-form {
   display: flex;
+  gap: 24px;
 }
 .footer-label {
-margin-right: 24px;
+/* margin-right: 24px; */
 }
 
 .footer-input::placeholder {
@@ -524,7 +529,7 @@ margin-right: 24px;
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 165px;
+  min-width: 165px;
   height: 40px;
   color: var(--white-background, #fff);
   text-align: center;
@@ -536,6 +541,7 @@ margin-right: 24px;
   background-color: var(--primary-brand);
   border: none;
   border-radius: 4px;
+  cursor: pointer;
   transition:  background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -705,7 +711,7 @@ margin-right: 24px;
 
 .modal-input {
   width: 100%;
-  height: 58px;
+  height: 40px;
   background-color: transparent;
   border-radius: 4px;
   border: 1px solid var(--navyblue-modal, rgba(46, 47, 66, 0.4));
@@ -729,10 +735,14 @@ margin-right: 24px;
   background-color: transparent;
   border-radius: 4px;
   border: 1px solid var(--navyblue-modal, rgba(46, 47, 66, 0.4));
-  padding: 16px 8px;
+  padding: 8px 16px;
   outline: transparent;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   resize: none;
+   font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: rgba(46, 47, 66, 0.4);
 }
 
 .modal-comment:focus {
@@ -741,19 +751,17 @@ margin-right: 24px;
 
 .modal-comment::placeholder {
   color: var(--navyblue-modal, rgba(46, 47, 66, 0.4));
-  font-family: Roboto;
   font-size: 12px;
-  font-weight: 400;
   line-height: 1.17;
   letter-spacing: 0.04em;
 }
 
 .modal-field {
-  margin-bottom: 8px;
+  margin-bottom: 16px;
 }
 
 .modal-label {
-  display: inline-block;
+  display: block;
   color: var(--lightslate, #8e8f99);
   font-family: Roboto;
   font-size: 12px;
@@ -781,7 +789,7 @@ margin-right: 24px;
   border-radius: 4px;
   background: var(--iris, #4d5ae5);
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   margin-top: 24px;
 }
 
@@ -829,6 +837,10 @@ margin-right: 24px;
   pointer-events: none;
 }
 
+.check-field {
+  margin-bottom: 24px;
+}
+
 .modal-check-text {
   color: var(--subtle-text, #8e8f99);
   font-size: 12px;
@@ -846,22 +858,21 @@ margin-right: 24px;
   text-decoration-line: underline;
 }
 
-.modal-check-text span {
+.modal-check-icon {
   width: 16px;
   height: 16px;
   border-radius: 2px;
   border: 1px solid var(--navyblue-modal, rgba(46, 47, 66, 0.4));
   margin-right: 8px;
-  display: flex;
+  display: inline-flex;
   align-items: center;
   justify-content: center;
   fill: transparent;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-check:checked + .modal-check-text span {
   background-color: var(--pressed-state);
-  fill: var(--accent);
+  fill: #F4F4FD;
   border: none;
 }
