--- a/css/styles.css
+++ b/css/styles.css
@@ -504,10 +504,10 @@ img {
   padding-left: 16px;
   padding-right: 16px;
   color: var(--white-background, #fff);
-   font-size: 12px;
+  font-size: 12px;
   line-height: 1.5;
   letter-spacing: 0.04em;
-   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15)); 
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
 }
 
 .footer-form {
@@ -515,7 +515,7 @@ img {
   gap: 24px;
 }
 .footer-label {
-/* margin-right: 24px; */
+  /* margin-right: 24px; */
 }
 
 .footer-input::placeholder {
@@ -542,7 +542,7 @@ img {
   border: none;
   border-radius: 4px;
   cursor: pointer;
-  transition:  background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-form-icon {
@@ -698,6 +698,9 @@ img {
   padding: 72px 24px 24px 24px;
 }
 
+.modal-field {
+  margin-bottom: 8px;
+}
 .modal-title {
   color: var(--dark);
   text-align: center;
@@ -739,7 +742,7 @@ img {
   outline: transparent;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   resize: none;
-   font-size: 12px;
+  font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.04em;
   color: rgba(46, 47, 66, 0.4);
@@ -756,7 +759,7 @@ img {
   letter-spacing: 0.04em;
 }
 
-.modal-field {
+.check-field {
   margin-bottom: 16px;
 }
 
@@ -859,20 +862,22 @@ img {
 }
 
 .modal-check-icon {
+  display: inline-flex;
   width: 16px;
   height: 16px;
   border-radius: 2px;
   border: 1px solid var(--navyblue-modal, rgba(46, 47, 66, 0.4));
   margin-right: 8px;
-  display: inline-flex;
   align-items: center;
   justify-content: center;
   fill: transparent;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-check:checked + .modal-check-text span {
   background-color: var(--pressed-state);
-  fill: #F4F4FD;
+  fill: #f4f4fd;
   border: none;
 }
